k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld2
  namespace: suresh-apps
  labels:
    app: helloworld2
spec:
  selector:
    app: helloworld2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
